// vim: tw=0 ai et ts=2 sw=2
= Changelog
Ewan Edwards <eedwards@journaltech.com>
:keepacl: https://keepachangelog.com/en/1.1.0/[Keep a Changelog^]
:semantic: https://semver.org/spec/v2.0.0.html[Semantic Versioning^]
:org: https://github.com/jtidocs
:repo: jti-vale-style
:unreleased: {org}/{repo}/compare/v1.0.0\.\.\.HEAD[Unreleased]
:1-0-0: {org}/{repo}/releases/tag/v1.0.0[1.0.0]
:1-0-1: {org}/{repo}/compare/v1.0.0\.\.\.1.0.1[1.0.1]

All notable changes to this project are documented in this file.

The format is based on {keepacl}, and this project adheres to {semantic}.

== {unreleased}

== {1-0-1} - 2023-05-30

- Include `meta.json`.

== {1-0-0} - 2023-05-26

- Initial release.