@@ -1,0 +1,13 @@
+extends: existence
+message: "Avoid first-person pronouns such as '%s'."
+link: 'https://developers.google.com/style/pronouns#personal-pronouns'
+ignorecase: true
+level: warning
+nonword: true
+tokens:
+  - (?:^|\s)I\s
+  - (?:^|\s)I,\s
+  - \bI['’]m\b
+  - \b?<!["“'‘])me\b
+  - \b?<!["“'‘])my\b
+  - \bmine\b
